@@ -2,6 +2,8 @@
 
 --- Ver. 1.3.1 ---
 
+- New: Removed support of obsolete Visual Studio .NET 2003. 
+
 - New: Removed deprecated functions crAddFileA(), crAddFileW(), 
        crInstallToCurrentThread(), crExceptionFilter() and deprecated 
        constant CR_WIN32_STRUCTURED_EXCEPTION.
